<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ModifyMonsterActivity">

    <EditText
        android:id="@+id/new_monster_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nom_verniculaire"
        android:inputType="text"/>
    <EditText
        android:id="@+id/new_monster_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/groupe"
        android:inputType="text"/>
    <EditText
        android:id="@+id/new_monster_elements"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/element_s"
        android:inputType="text"/>
    <EditText
        android:id="@+id/new_monster_weaknesses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/faiblesse_s"
        android:inputType="text"/>
    <EditText
        android:id="@+id/new_monster_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:inputType="textMultiLine"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rang"
        android:layout_marginTop="8dp"
        android:textAppearance="@android:style/TextAppearance.Medium"/>

    <NumberPicker
        android:id="@+id/number_picker_danger"
        android:layout_width="wrap_content"
        android:layout_height="142dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_ro_de_l_entr_e"
        android:layout_marginTop="8dp"
        android:textAppearance="@android:style/TextAppearance.Medium"/>
    <NumberPicker
        android:id="@+id/number_picker_entry"
        android:layout_width="wrap_content"
        android:layout_height="142dp">
    </NumberPicker>

</LinearLayout>